2015-01-21  Titus Brown  <titus@idyll.org>

    * sandbox/readstats.py: fixed non-functional string interpolation at end;
    added -o to send output to a file.
    * tests/test_sandbox_scripts.py: added tests for readstats.py

2015-01-23  Michael R. Crusoe  <mcrusoe@msu.edu>

    * Makefile: remove the user installs for the `install-dependencies` target

2015-01-23  Michael R. Crusoe  <mcrusoe@msu.edu>

    * README.rst,doc/user/install.txt: clarify that we support Python 2.7.x
    and not Python 3.

2015-01-21  Luiz Irber  <irberlui@msu.edu>

    * lib/hllcounter.{cc,hh}: Implemented a HyperLogLog counter.
    * khmer/{_khmermodule.cc, __init__.py}: added HLLCounter class
    initialization and wrapper.
    * tests/test_hll.py: added test functions for the new
    HyperLogLog counter.
    * sandbox/unique-kmers.py: implemented a CLI script for
    approximate cardinality estimation using a HyperLogLog counter.
    * setup.cfg, Makefile, third-party/smhasher/MurmurHash3.{cc,h},
    lib/kmer_hash.{cc,hh}, setup.py: added MurmurHash3 hash function
    and configuration.
    * setup.py: added a function to check if compiler supports OpenMP.

2015-01-14  Reed Cartwright  <cartwright@asu.edu>

    * doc/dev/getting-started.txt: Added install information for
    Arch Linux

2014-01-14  Michael R. Crusoe  <mcrusoe@msu.edu>

    * doc/user/{blog-posts,guide}.txt,examples/stamps/do.sh,sandbox/{
    collect-reads,error-correct-pass2,filter-median-and-pct,filter-median,
    read_aligner,split-sequences-by-length}.py,scripts/{filter-abund,
    load-into-counting}.py,tests/test_{counting_hash,hashbits,scripts}.py:
    remove references to ".kh" files replaces with ".pt" or ".ct" as
    appropriate
    * tests/test-data/{bad-vesionk12,normC20k20}.kh: renamed to "*.ct"

2015-01-13  Daniel Standage  <daniel.standage@gmail.com>

    * tests/khmer_tst_utils.py, tests/test_sandbox_scripts.py: removed
    unused module imports